{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 19,
  "lineage": "20b54f00-8390-958c-0619-17c2eee707d2",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:security-group/sg-0e2944eb998e42f4f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2944eb998e42f4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080b070c351c6be70"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230329072318582100000003",
            "name_prefix": "terraform-",
            "owner_id": "944341158162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ec2"
            },
            "tags_all": {
              "Name": "allow ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.ec2_allow_rule",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:security-group/sg-080b070c351c6be70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b070c351c6be70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230329072313059800000001",
            "name_prefix": "terraform-",
            "owner_id": "944341158162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh,http,https"
            },
            "tags_all": {
              "Name": "allow ssh,http,https"
            },
            "timeouts": null,
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072cb57970c39430d",
            "association_id": "eipassoc-052d4e2014b04f6b0",
            "domain": "vpc",
            "id": "eipalloc-072cb57970c39430d",
            "instance": "i-023e9e172908cabae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00ab8f068d369787c",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-54-146-4-196.compute-1.amazonaws.com",
            "public_ip": "54.146.4.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ami.data.aws_ami.linux2",
            "module.ami.data.aws_ami.ubuntu",
            "module.asg.aws_security_group.ec2_allow_rule",
            "module.ec2.aws_instance.wordpressec2",
            "module.ec2.aws_subnet.prod-subnet-public-1",
            "module.pairs.aws_key_pair.tf-key-pair",
            "module.pairs.tls_private_key.rsa",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:944341158162:instance/i-023e9e172908cabae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023e9e172908cabae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ab8f068d369787c",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-54-225-35-226.compute-1.amazonaws.com",
            "public_ip": "54.225.35.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3288565007ba7cc",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a460ad5a53a054f4",
            "tags": {
              "Name": "Wordress.web"
            },
            "tags_all": {
              "Name": "Wordress.web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080b070c351c6be70"
            ]
          },
          "dependencies": [
            "module.ami.data.aws_ami.linux2",
            "module.ami.data.aws_ami.ubuntu",
            "module.asg.aws_security_group.ec2_allow_rule",
            "module.ec2.aws_subnet.prod-subnet-public-1",
            "module.pairs.aws_key_pair.tf-key-pair",
            "module.pairs.tls_private_key.rsa",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:internet-gateway/igw-0ec75e2496a4f2b3f",
            "id": "igw-0ec75e2496a4f2b3f",
            "owner_id": "944341158162",
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:route-table/rtb-07903d721cd18f728",
            "id": "rtb-07903d721cd18f728",
            "owner_id": "944341158162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec75e2496a4f2b3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.prod-igw",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f9d7ab17db71bb",
            "route_table_id": "rtb-07903d721cd18f728",
            "subnet_id": "subnet-0a460ad5a53a054f4"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.prod-igw",
            "module.ec2.aws_route_table.prod-public-crt",
            "module.ec2.aws_subnet.prod-subnet-public-1",
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:subnet/subnet-0a460ad5a53a054f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a460ad5a53a054f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944341158162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:subnet/subnet-0733d40086c9ce686",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0733d40086c9ce686",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944341158162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:subnet/subnet-0536046f85f05501a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0536046f85f05501a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944341158162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091fbe8b3c8b068d3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944341158162:vpc/vpc-091fbe8b3c8b068d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea079be10e4dec51",
            "default_route_table_id": "rtb-084b530b6db9747ad",
            "default_security_group_id": "sg-0883cb517e70cc747",
            "dhcp_options_id": "dopt-0c7ebd60f50c42451",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091fbe8b3c8b068d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084b530b6db9747ad",
            "owner_id": "944341158162"
          }
        }
      ]
    }
  ]
}